--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <div class="w-60-l w-80-m w-100-s ml-auto mr-auto">
-  <div class="card blue-grey darken-1">
+  <div class="card blue-grey">
     <div class="card-content white-text">
       <span class="card-title pb3"><%= t(".title") %></span>
 
