--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,8 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application' %>
+    <%= javascript_pack_tag 'LikeComponent', 'data-turbolinks-eval': false, defer: true %>
+    <%= javascript_pack_tag 'FollowComponent', 'data-turbolinks-eval': false, defer: true %>
   </head>
 
   <body>
