--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -5,7 +5,7 @@
 </div>
 
 <div class="w-100-s ml-auto mr-auto">
-  <div class="card blue-grey darken-1">
+  <div class="card blue-grey">
     <div class="card-content white-text">
       <span class="card-title">owner of teams</span>
       <% @owned_teams.try(:each) do |team| %>
@@ -18,7 +18,7 @@
 </div>
 
 <div class="w-100-s ml-auto mr-auto">
-  <div class="card blue-grey darken-1">
+  <div class="card blue-grey">
     <div class="card-content white-text">
       <span class="card-title">member of teams</span>
       <% @member_teams.try(:each) do |team| %>
