--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col s4">
-    <div class="card blue-grey darken-1">
+    <div class="card blue-grey">
       <div class="card-stacked">
         <div class="card-content">
           <div class="ma1">
@@ -39,7 +39,7 @@
     </div>
   </div>
   <div class="col s8">
-    <div class="card blue-grey darken-1">
+    <div class="card blue-grey">
       <div class="card-stacked">
         <div class="card-content">
           <span class="card-title white-text"><%= t('profile.recent') %></span>
