Feature follow invest (#49)
* adds follow model with associtaions on user and invest and unit tests

* removes unused destroy method from likes controller

* adds test for likes controller

* adds follows controller, spec and routes

* adds helper to check if a user is following an invest

* adds followContainer to the view to hold the react component

* adds liked helper to application helper

* adds number following to follows controller

* adds is liked boolean to return of likes create

* styles likes and follows on invest show

* creates activity_notifications with controllers view tests etc

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -125,10 +125,13 @@ abbr {
 
 .head-logo {
   margin: 3px 0 0 20px;
+  img {
+    max-width: 450px;
+  }
 }
 
 .likes-icon {
-  font-size: 20px;
+  font-size: 11px !important;
 }
 
 .likes {
@@ -138,6 +141,7 @@ abbr {
 
 .dropdown-content {
   top: -65px;
+  min-width: 200px;
 }
 
 .hover-grow {
@@ -188,4 +192,34 @@ abbr {
 
 .like-button {
   font-size: 2.3rem;
+}
+
+.number-button {
+  width: 130px;
+  text-align: left;
+  padding-right: 0;
+  span {
+    float: right;
+    width: 30px;
+    text-align: center;
+    border-left: 1px solid $white-color;
+    margin-left: 5px;
+  }
+}
+
+.number-button-large {
+  width: 165px;
+  text-align: left;
+  padding-right: 0;
+  span {
+    float: right;
+    width: 30px;
+    text-align: center;
+    border-left: 1px solid $white-color;
+    margin-left: 5px;
+  }
+}
+
+.options-container {
+  display: inline-block;
 }
