--- a/app/views/shared/_main_menu.html.erb
+++ b/app/views/shared/_main_menu.html.erb
@@ -1,11 +1,11 @@
 <ul id="mainMenu" class="fixed header-menu bg-moon-gray list br2">
-  <li class="mb2 bb"><%= link_to t("menu.search"), root_path, class: 'no-underline near-black hover-light-gray h-font f3 ttu' %></li>
+  <li class="mb2 bb"><%= link_to t("menu.search"), root_path, class: 'no-underline near-black hover-black-50 h-font f3 ttu' %></li>
   <% if signed_in? -%>
-    <li class="mb2 bb"><%= link_to t("menu.teams"), teams_path, class: 'no-underline near-black hover-light-gray h-font f3 ttu' %></li>
-    <li class="mb2 bb"><%= link_to t("menu.profile"), user_path(current_user), class: 'no-underline near-black hover-light-gray h-font f3 ttu' %></li>
-    <li class="mb2 bb"><%= link_to t("menu.settings"), edit_settings_account_path, class: 'no-underline near-black hover-light-gray h-font f3 ttu' %></li>
-    <li class="mb2 bb"><%= link_to t("menu.log_out"), sign_out_path, method: :delete, class: 'no-underline near-black hover-light-gray h-font f3 ttu' %></li>
+    <li class="mb2 bb"><%= link_to t("menu.teams"), teams_path, class: 'no-underline near-black hover-black-50 h-font f3 ttu' %></li>
+    <li class="mb2 bb"><%= link_to t("menu.profile"), user_path(current_user), class: 'no-underline near-black hover-black-50 h-font f3 ttu' %></li>
+    <li class="mb2 bb"><%= link_to t("menu.settings"), edit_settings_account_path, class: 'no-underline near-black hover-black-50 h-font f3 ttu' %></li>
+    <li class="mb2 bb"><%= link_to t("menu.log_out"), sign_out_path, method: :delete, class: 'no-underline near-black hover-black-50 h-font f3 ttu' %></li>
   <% else -%>
-    <li class="mb2 bb"><%= link_to t("menu.log_in"), sign_in_path, class: 'no-underline near-black hover-light-gray h-font f3 ttu' %></li>
+    <li class="mb2 bb"><%= link_to t("menu.log_in"), sign_in_path, class: 'no-underline near-black hover-black-50 h-font f3 ttu' %></li>
   <% end -%>
 </ul>
