--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,12 +4,31 @@
 // Font Families
 .h-font {
   font-family: 'Ranga', cursive;
+  font-weight: 300;
 }
 
 .p-font {
   font-family: 'Roboto', sans-serif;
 }
 
+p {
+  font-family: 'Roboto', sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-weight: 300;
+}
+
+// Links
+a {
+  color: #100f34;
+}
+
+a:hover {
+  color: #424051;
+}
+
+// Forms
 input {
   font-family: 'Roboto', sans-serif !important;
   border: none;
@@ -20,12 +39,15 @@ input {
   height: 1.5rem;
 }
 
+// Widths
+.w-28 {
+  width: 28%;
+}
+
 // Flex Box
 .flex-grow-2 {
   flex-grow: 2;
 }
-
-// Lists
 
 // Header
 .header-logo-top-fix {
@@ -41,4 +63,10 @@ input {
 
 .header-menu.shown {
   top: 0;
+}
+
+.flash-position {
+  top: 60px;
+  left: 50%;
+  transform: translateX(-50%);
 }
