--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,23 +19,26 @@
       <%= render 'shared/main_menu' %>
     </header>
 
-<!--    <main>-->
-<!--      <div>-->
-<!--        <div id="flash">-->
-          <%# flash.each do |key, value| -%>
-<!--            <div id="flash_<%#= key %>"><%#= h value %></div>-->
-          <%# end %>
-<!--        </div>-->
-        <%#= yield %>
-<!--      </div>-->
-<!--    </main>-->
+    <main class="mt5">
+      <div id="flash">
+        <% flash.each do |key, value| -%>
+          <div class="fixed z-9999 bg-light-gray ph4 pv3 flash-position br2" id="flash_<%= key %>"><%= h value %></div>
+        <% end %>
+      </div>
+      <div class="mw9 center ph3-ns">
+        <div class="cf ph2-ns">
+          <div class="fl w-100 w-third-ns pa3 pr4">
+            <%= render 'shared/sidebar_dash' %>
+          </div>
+          <div class="fl w-100 w-two-thirds-ns pa3">
+            <%= yield %>
+          </div>
+        </div>
+      </div>
+    </main>
 
-<!--    <footer>-->
-<!--      <div>-->
-<!--        <div>-->
-<!--          © 2018 myInvestmentTime.com-->
-<!--        </div>-->
-<!--      </div>-->
-<!--    </footer>-->
+    <footer>
+      <%= render 'shared/footer' %>
+    </footer>
   </body>
 </html>
