--- a/app/assets/stylesheets/tachyons.css
+++ b/app/assets/stylesheets/tachyons.css
@@ -336,15 +336,15 @@ img { max-width: 100%; }
 
 */
 .b--black { border-color: #000; }
-.b--near-black { border-color: #2c2918; }
+.b--near-black { border-color: #363942; }
 .b--dark-gray { border-color: #333; }
 .b--mid-gray { border-color: #555; }
 .b--gray { border-color: #777; }
 .b--silver { border-color: #999; }
 .b--light-silver { border-color: #aaa; }
-.b--moon-gray { border-color: #cbc7ba; }
+.b--moon-gray { border-color: #b1bcc8; }
 .b--light-gray { border-color: #d7d7d7; }
-.b--near-white { border-color: #f7f7f7; }
+.b--near-white { border-color: #e6ecf0; }
 .b--white { border-color: #fefefe; }
 .b--white-90 { border-color: rgba( 255, 255, 255, .9 ); }
 .b--white-80 { border-color: rgba( 255, 255, 255, .8 ); }
@@ -1090,15 +1090,15 @@ code, .code { font-family: Consolas, monaco, monospace; }
 .white-20 { color: rgba( 255, 255, 255, .2 ); }
 .white-10 { color: rgba( 255, 255, 255, .1 ); }
 .black { color: #000; }
-.near-black { color: #2c2918; }
+.near-black { color: #363942; }
 .dark-gray { color: #333; }
 .mid-gray { color: #555; }
 .gray { color: #777; }
 .silver { color: #999; }
 .light-silver { color: #aaa; }
-.moon-gray { color: #cbc7ba; }
+.moon-gray { color: #b1bcc8; }
 .light-gray { color: #d7d7d7; }
-.near-white { color: #f7f7f7; }
+.near-white { color: #e6ecf0; }
 .white { color: #fefefe; }
 .dark-red { color: #e7040f; }
 .red { color: #ff4136; }
@@ -1147,15 +1147,15 @@ code, .code { font-family: Consolas, monaco, monospace; }
 .bg-white-10 { background-color: rgba( 255, 255, 255, .1 ); }
 /* Background colors */
 .bg-black { background-color: #000; }
-.bg-near-black { background-color: #2c2918; }
+.bg-near-black { background-color: #363942; }
 .bg-dark-gray { background-color: #333; }
 .bg-mid-gray { background-color: #555; }
 .bg-gray { background-color: #777; }
 .bg-silver { background-color: #999; }
 .bg-light-silver { background-color: #aaa; }
-.bg-moon-gray { background-color: #cbc7ba; }
+.bg-moon-gray { background-color: #b1bcc8; }
 .bg-light-gray { background-color: #d7d7d7; }
-.bg-near-white { background-color: #f7f7f7; }
+.bg-near-white { background-color: #e6ecf0; }
 .bg-white { background-color: #fefefe; }
 .bg-transparent { background-color: transparent; }
 .bg-dark-red { background-color: #e7040f; }
@@ -1194,8 +1194,8 @@ code, .code { font-family: Consolas, monaco, monospace; }
  */
 .hover-black:hover { color: #000; }
 .hover-black:focus { color: #000; }
-.hover-near-black:hover { color: #2c2918; }
-.hover-near-black:focus { color: #2c2918; }
+.hover-near-black:hover { color: #363942; }
+.hover-near-black:focus { color: #363942; }
 .hover-dark-gray:hover { color: #333; }
 .hover-dark-gray:focus { color: #333; }
 .hover-mid-gray:hover { color: #555; }
@@ -1206,12 +1206,12 @@ code, .code { font-family: Consolas, monaco, monospace; }
 .hover-silver:focus { color: #999; }
 .hover-light-silver:hover { color: #aaa; }
 .hover-light-silver:focus { color: #aaa; }
-.hover-moon-gray:hover { color: #cbc7ba; }
-.hover-moon-gray:focus { color: #cbc7ba; }
+.hover-moon-gray:hover { color: #b1bcc8; }
+.hover-moon-gray:focus { color: #b1bcc8; }
 .hover-light-gray:hover { color: #d7d7d7; }
 .hover-light-gray:focus { color: #d7d7d7; }
-.hover-near-white:hover { color: #f7f7f7; }
-.hover-near-white:focus { color: #f7f7f7; }
+.hover-near-white:hover { color: #e6ecf0; }
+.hover-near-white:focus { color: #e6ecf0; }
 .hover-white:hover { color: #fefefe; }
 .hover-white:focus { color: #fefefe; }
 .hover-black-90:hover { color: rgba( 0, 0, 0, .9 ); }
@@ -1253,8 +1253,8 @@ code, .code { font-family: Consolas, monaco, monospace; }
 .hover-inherit:hover, .hover-inherit:focus { color: inherit; }
 .hover-bg-black:hover { background-color: #000; }
 .hover-bg-black:focus { background-color: #000; }
-.hover-bg-near-black:hover { background-color: #2c2918; }
-.hover-bg-near-black:focus { background-color: #2c2918; }
+.hover-bg-near-black:hover { background-color: #363942; }
+.hover-bg-near-black:focus { background-color: #363942; }
 .hover-bg-dark-gray:hover { background-color: #333; }
 .hover-bg-dark-gray:focus { background-color: #333; }
 .hover-bg-mid-gray:hover { background-color: #555; }
@@ -1265,12 +1265,12 @@ code, .code { font-family: Consolas, monaco, monospace; }
 .hover-bg-silver:focus { background-color: #999; }
 .hover-bg-light-silver:hover { background-color: #aaa; }
 .hover-bg-light-silver:focus { background-color: #aaa; }
-.hover-bg-moon-gray:hover { background-color: #cbc7ba; }
-.hover-bg-moon-gray:focus { background-color: #cbc7ba; }
+.hover-bg-moon-gray:hover { background-color: #b1bcc8; }
+.hover-bg-moon-gray:focus { background-color: #b1bcc8; }
 .hover-bg-light-gray:hover { background-color: #d7d7d7; }
 .hover-bg-light-gray:focus { background-color: #d7d7d7; }
-.hover-bg-near-white:hover { background-color: #f7f7f7; }
-.hover-bg-near-white:focus { background-color: #f7f7f7; }
+.hover-bg-near-white:hover { background-color: #e6ecf0; }
+.hover-bg-near-white:focus { background-color: #e6ecf0; }
 .hover-bg-white:hover { background-color: #fefefe; }
 .hover-bg-white:focus { background-color: #fefefe; }
 .hover-bg-transparent:hover { background-color: transparent; }
@@ -1629,9 +1629,9 @@ code, .code { font-family: Consolas, monaco, monospace; }
 */
 .collapse { border-collapse: collapse; border-spacing: 0; }
 .striped--light-silver:nth-child(odd) { background-color: #aaa; }
-.striped--moon-gray:nth-child(odd) { background-color: #cbc7ba; }
+.striped--moon-gray:nth-child(odd) { background-color: #b1bcc8; }
 .striped--light-gray:nth-child(odd) { background-color: #d7d7d7; }
-.striped--near-white:nth-child(odd) { background-color: #f7f7f7; }
+.striped--near-white:nth-child(odd) { background-color: #e6ecf0; }
 .stripe-light:nth-child(odd) { background-color: rgba( 255, 255, 255, .1 ); }
 .stripe-dark:nth-child(odd) { background-color: rgba( 0, 0, 0, .1 ); }
 /*
@@ -1968,6 +1968,7 @@ code, .code { font-family: Consolas, monaco, monospace; }
    Colors
 
 */
+:root {/* USED *//* USED *//* USED *//* USED *//* USED *//* USED */ }
 /*
 
   CUSTOM MEDIA QUERIES
