--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,4 +1,4 @@
-<div class="fixed top-0 left-0 bg-near-black w-100 flex items-center justify-between ph4 pv1 z-999">
+<div class="fixed top-0 left-0 bg-near-black w-100 flex items-center justify-between ph4 pv1 z-999 main-shadow">
   <div>
     <a href="/"><%= image_tag 'header-logo.svg', class: 'w4 header-logo-top-fix' %></a>
   </div>
