--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -49,6 +49,11 @@ input {
   flex-grow: 2;
 }
 
+// Shadow
+.main-shadow {
+  box-shadow: 2px 2px 0 rgba(0, 0, 0, 0.25);
+}
+
 // Header
 .header-logo-top-fix {
   padding-top: 4px;
