--- a/app/views/invests/shared/_invest_list.html.erb
+++ b/app/views/invests/shared/_invest_list.html.erb
@@ -1,13 +1,9 @@
-<div class="col s12 hover-grow">
-  <div class="card horizontal">
-    <div class="card-stacked">
-      <div class="card-content">
-        <span class="card-title"><%= invest.title %></span>
-        <p><%= truncate invest.body, length: 200, separator: /\w+/ %></p>
-      </div>
-      <div class="card-action">
-        <p><%= invest.user.username %></p>
-      </div>
-    </div>
+<div class="bg-white main-shadow mb4 pa0">
+  <div class="ph3 pt3">
+    <h2 class="h-font pt0 mt0 bb b--moon-gray"><%= invest.title %></h2>
+    <p><%= truncate invest.body, length: 200, separator: /\w+/ %></p>
+  </div>
+  <div class="ph3 pv1 bg-near-black">
+    <p class="pa0 ma0 near-white"><%= invest.user.username %></p>
   </div>
 </div>
