--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,13 +25,18 @@
           <div class="fixed z-9999 bg-light-gray ph4 pv3 flash-position br2" id="flash_<%= key %>"><%= h value %></div>
         <% end %>
       </div>
-      <div class="mw9 center ph3-ns">
+      <div class="mw8 center ph3-ns">
         <div class="cf ph2-ns">
-          <div class="fl w-100 w-third-ns pa3 pr4">
-            <%= render 'shared/sidebar_dash' %>
-          </div>
-          <div class="fl w-100 w-two-thirds-ns pa3">
+          <% if signed_in? %>
+            <div class="fl w-100 w-third-ns pa3 pr4">
+              <%= render 'shared/sidebar_dash' %>
+            </div>
+            <div class="fl w-100 w-two-thirds-ns pa3">
+          <% else %>
+            <div class="fl w-100 pa3">
+          <% end %>
             <%= yield %>
+          </div>
           </div>
         </div>
       </div>
