--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -6,7 +6,7 @@
     <%= form_tag(invests_path, :method => 'get') do %>
         <%= search_field_tag :search, params[:search],
                              placeholder: 'search for an investment...',
-                             class: 'input-reset f5 h2 ph2 br1 b--moon-gray w-80' %>
+                             class: 'f5 h2 ph2 br1 b--moon-gray w-80' %>
     <% end %>
   </div>
   <div>
