--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,77 +1,4 @@
 @import "fonts";
 @import "tachyons";
-
-// Font Families
-.h-font {
-  font-family: 'Ranga', cursive;
-  font-weight: 300;
-}
-
-.p-font {
-  font-family: 'Roboto', sans-serif;
-}
-
-p {
-  font-family: 'Roboto', sans-serif;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  font-weight: 300;
-}
-
-// Links
-a {
-  color: #100f34;
-}
-
-a:hover {
-  color: #424051;
-}
-
-// Forms
-input {
-  font-family: 'Roboto', sans-serif !important;
-  border: none;
-}
-
-// Heights
-.h1p5 {
-  height: 1.5rem;
-}
-
-// Widths
-.w-28 {
-  width: 28%;
-}
-
-// Flex Box
-.flex-grow-2 {
-  flex-grow: 2;
-}
-
-// Shadow
-.main-shadow {
-  box-shadow: 2px 2px 0 rgba(0, 0, 0, 0.25);
-}
-
-// Header
-.header-logo-top-fix {
-  padding-top: 4px;
-}
-
-.header-menu {
-  transition: all 200ms ease-in-out;
-  top: -300px;
-  right: 2rem;
-  padding: 60px 30px 20px;
-}
-
-.header-menu.shown {
-  top: 0;
-}
-
-.flash-position {
-  top: 60px;
-  left: 50%;
-  transform: translateX(-50%);
-}
+@import "general";
+@import "components";
