--- a/app/views/passwords/create.html.erb
+++ b/app/views/passwords/create.html.erb
@@ -1,7 +1,5 @@
-<div class="w-60-l w-80-m w-100-s ml-auto mr-auto">
-  <div class="card blue-grey">
-    <div class="card-content white-text">
-      <p class="white-text pb4 center"><%= t(".description") %></p>
-    </div>
+<div class="dark-card-container mw5p5 center">
+  <div class="dark-card-body pb3">
+    <p class="tc"><%= t(".description") %></p>
   </div>
 </div>
