--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,4 @@
-@import "fonts";
+@import url('https://fonts.googleapis.com/css?family=Quattrocento+Sans|Ranga|Roboto:300,400');
 @import "tachyons";
 @import "general";
 @import "components";
