--- a/app/views/invests/edit.html.erb
+++ b/app/views/invests/edit.html.erb
@@ -1,28 +1,42 @@
-<div class="row">
-  <div class="col s12">
-    <%= link_to 'cancel', invest_path(@invest), class: 'waves-effect waves-light btn btn-dark' %>
+<div class="dark-card-container center">
+  <div class="dark-card-body pb3">
+    <%= link_to 'cancel', invest_path(@invest), class: 'dark-button' %>
   </div>
 </div>
-<div class="row">
-  <div class="col s12">
-    <div class="card">
-      <div class="card-stacked">
-        <div class="card-content">
-          <span class="card-title pb3"><%= t(".title") %></span>
+<div class="dark-card-container center">
+  <div class="dark-card-body pb3">
+    <h2 class="dark-card-header"><%= t(".title") %></h2>
 
-          <%= simple_form_for @invest do |f| %>
-            <%= f.input :title, input_html: { class: 'validate' } %>
-            <%= f.input :body, input_html: { class: 'materialize-textarea validate textarea-main' } %>
-
-            <%= f.simple_fields_for :links, OpenStruct.new(@invest.links) do |link| %>
-                <%= link.input :homepage, input_html: { class: 'validate' } %>
-                <%= link.input :github, input_html: { class: 'validate' } %>
-            <% end %>
-
-              <%= f.button :submit, class: 'btn-dark' %>
-          <% end %>
-        </div>
+    <%= simple_form_for @invest do |f| %>
+      <div class="full-width-form-group">
+        <%= f.label :title, 'title', class: 'main-label' %>
+        <%= f.input :title,
+                    input_html: { class: 'main-input w-100',
+                                  placeholder: 'What are your working on?'},
+                    label: false %>
       </div>
-    </div>
+      <div class="full-width-form-group">
+        <%= f.label :body, 'description', class: 'main-label' %>
+        <%= f.input :body,
+                    input_html: { class: 'main-input w-100',
+                                  placeholder: 'Write a brief description of what you are working on.  You can use #hash-tags for sorting and update the status with history.'},
+                    label: false %>
+      </div>
+
+      <%= f.simple_fields_for :links, OpenStruct.new(@invest.links) do |link| %>
+        <div class="full-width-form-group">
+          <%= link.label :homepage, 'homepage', class: 'main-label' %>
+          <%= link.input :homepage, input_html: { class: 'main-input w-100',
+                                                  placeholder: 'http://www.yourpage.com'}, label: false %>
+        </div>
+        <div class="full-width-form-group">
+          <%= link.label :github, 'github', class: 'main-label' %>
+          <%= link.input :github, input_html: { class: 'main-input w-100',
+                                                placeholder: 'http://github.com/username/repo' }, label: false %>
+        </div>
+      <% end %>
+
+      <%= f.button :submit, class: 'dark-button mt2' %>
+    <% end %>
   </div>
 </div>
