--- a/app/views/statuses/new.html.erb
+++ b/app/views/statuses/new.html.erb
@@ -1,42 +1,46 @@
-<div class="row">
-  <div class="col s12">
-    <%= link_to 'cancel', invest_path(@invest), class: 'waves-effect waves-light btn btn-dark' %>
+<div class="dark-card-container center">
+  <div class="dark-card-body pb3">
+    <%= link_to 'cancel', invest_path(@invest), class: 'dark-button' %>
   </div>
 </div>
-<div class="row">
-  <div class="col s12">
-    <div class="card">
-      <div class="card-stacked">
-        <div class="card-content overflow-auto">
-          <span class="card-title pb3">history</span>
-          <% @invest.statuses.try(:each) do |i| %>
-            <div class="clearfix">
-              <p class="pb4 fl"><%= i.title %>:</p>
-              <p class="pb4 fl ml-4"><%= i.detail %></p>
-              <p class="pb4 fr ml-4"><%= i.created_at.strftime('%H:%M - %b %e %Y') %></p>
-            </div>
-          <% end %>
-        </div>
+
+<div class="light-card-container center">
+  <div class="light-card-body pb3">
+    <h2 class="light-card-header r-font">invest history</h2>
+    <% @invest.statuses.try(:each) do |i| %>
+      <div class="cl overflow-auto">
+        <p class="fl ma1">• <%= i.created_at.strftime('%H:%M - %b %e %Y') %></p>
+        <p class="fl ma1 ml2"><%= i.title %></p>
+        <% unless i.detail.blank? %>
+          <p class="fl ma1 ml4"><%= i.detail %></p>
+        <% end %>
       </div>
-    </div>
+    <% end %>
   </div>
 </div>
-<div class="row">
-  <div class="col s12">
-    <div class="card">
-      <div class="card-stacked">
-        <div class="card-content">
-          <span class="card-title">new</span>
 
-          <%= simple_form_for @status, url: invest_statuses_path do |f| %>
-              <%= f.input :title, input_html: { class: 'validate' }, label: 'title' %>
-              <%= f.input :detail, input_html: { class: 'materialize-textarea validate textarea-main' }, label: 'detail' %>
+<div class="dark-card-container center">
+  <div class="dark-card-body pb3">
+    <h2 class="dark-card-header">add to history</h2>
 
-              <%= f.button :submit, class: 'btn-dark' %>
-          <% end %>
-
-        </div>
+    <%= simple_form_for @status, url: invest_statuses_path do |f| %>
+      <div class="full-width-form-group">
+        <%= f.label :title, 'title', class: 'main-label' %>
+        <%= f.input :title,
+                    input_html: { class: 'main-input w-100',
+                                  placeholder: 'What is the update?'},
+                    label: false %>
       </div>
-    </div>
+      <div class="full-width-form-group">
+        <%= f.label :detail, 'description', class: 'main-label' %>
+        <%= f.input :detail,
+                    input_html: { class: 'main-input w-100',
+                                  placeholder: 'Provide some more details, or not, this is optional.'},
+                    label: false %>
+      </div>
+
+      <%= f.button :submit, class: 'dark-button mt2' %>
+    <% end %>
+
   </div>
 </div>
